--- a/SBRT-Web/src/main/resources/application.properties
+++ b/SBRT-Web/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+spring.application.name=sbrt-web
 spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.hikari.jdbc-url=jdbc:mariadb://192.168.34.77:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
 spring.datasource.hikari.username=tracom
@@ -44,3 +45,23 @@ logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
 
 # root level
 #logging.level.=INFO
+
+
+#Kafka              
+spring.kafka.bootstrap-servers=192.168.34.77:9092,192.168.34.82:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=kr.tracom.platform.service.kafka.serialization.TimsMessageSerializer
+spring.kafka.producer.compression-type=gzip
+spring.kafka.consumer.group-id=gid-sbrt-web
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=kr.tracom.platform.service.kafka.serialization.TimsMessageDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages='*'
+
+#zipkin
+spring.sleuth.trace-id128=true
+spring.sleuth.sampler.probability=1.0
+spring.zipkin.base-url=http://192.168.34.77:9411/
+spring.zipkin.sender.type=kafka
+    
+          
