--- a/SBRT-Web/pom.xml
+++ b/SBRT-Web/pom.xml
@@ -30,6 +30,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		
+		<local.lib>${basedir}/libs</local.lib>
 	</properties>
 	
 	<dependencies>
@@ -267,6 +269,67 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+		
+		
+		<!-- Kafka -->
+		<dependency>
+		    <groupId>org.springframework.kafka</groupId>
+		    <artifactId>spring-kafka</artifactId>
+		</dependency>
+		
+		<!-- Sleuth -->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-sleuth</artifactId>
+		    <version>2.2.8.RELEASE</version>
+		</dependency>
+		
+		<!-- Zipkin -->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-zipkin</artifactId>
+		    <version>2.2.8.RELEASE</version>
+		</dependency>
+				
+		
+		<!-- T-Platform  -->
+		<dependency>
+ 			<groupId>t-platform</groupId>
+ 			<artifactId>common</artifactId>
+ 			<version>1.0.0</version>
+ 			<scope>system</scope>
+ 			<systemPath>${local.lib}\common-1.0.0.jar</systemPath>
+ 		</dependency>
+ 		<dependency>
+ 			<groupId>t-platform</groupId>
+ 			<artifactId>service</artifactId>
+ 			<version>1.0.0</version>
+ 			<scope>system</scope>
+ 			<systemPath>${local.lib}\service-1.0.0.jar</systemPath>
+ 		</dependency>			
+		<dependency>
+ 			<groupId>t-platform</groupId>
+ 			<artifactId>timsattribute</artifactId>
+ 			<version>1.0.0</version>
+ 			<scope>system</scope>
+ 			<systemPath>${local.lib}\timsattribute-1.0.0.jar</systemPath>
+ 		</dependency>	
+ 		<dependency>
+ 			<groupId>t-platform</groupId>
+ 			<artifactId>timsnet</artifactId>
+ 			<version>1.0.0</version>
+ 			<scope>system</scope>
+ 			<systemPath>${local.lib}\timsnet-1.0.0.jar</systemPath>
+ 		</dependency>
+		<dependency>
+ 			<groupId>t-platform</groupId>
+ 			<artifactId>timstcp</artifactId>
+ 			<version>1.0.0</version>
+ 			<scope>system</scope>
+ 			<systemPath>${local.lib}\timstcp-1.0.0.jar</systemPath>
+ 		</dependency>	 		
+ 			
+		
 	</dependencies>
 
 	<build>
