- kafka 패키지 이동(kr.tracom.kafka -> kr.tracom.tims.kafka) - kafka 수신 후 TIMS 메시지 data parsing을 위한 기본 처리 추가

--- a/SBRT-Web/pom.xml
+++ b/SBRT-Web/pom.xml
@@ -288,7 +288,7 @@
 		</dependency>
 				
 		
-		<!-- T-Platform  -->
+		<!-- TIMS  -->
 		<dependency>
  			<groupId>t-platform</groupId>
  			<artifactId>common</artifactId>
@@ -323,8 +323,25 @@
  			<version>1.0.0</version>
  			<scope>system</scope>
  			<systemPath>${local.lib}\timstcp-1.0.0.jar</systemPath>
- 		</dependency>
-
+ 		</dependency>	 		
+ 			
+		<!-- For TIMS Attribute -->
+		<!-- org.reflections, org.apache.commons, joda-time -->
+		<dependency>
+		    <groupId>org.reflections</groupId>
+		    <artifactId>reflections</artifactId>
+		    <version>0.9.11</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>joda-time</groupId>
+		    <artifactId>joda-time</artifactId>
+		</dependency>
+							 			
+		
 	</dependencies>
 
 	<build>
