[백승종] 공통 기초 정보 수정

--- a/SBRT-Web/pom.xml
+++ b/SBRT-Web/pom.xml
@@ -14,7 +14,7 @@
 	<groupId>kr.tracom</groupId>
 	<artifactId>SBRT-Web</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>SBRT-Web</name>
 	<description>Demo project for Spring Boot</description>
