--- a/SBRT-Web/src/main/resources/application.properties
+++ b/SBRT-Web/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 server.port=8081
 spring.application.name=sbrt-web
 spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mariadb://192.168.34.77:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
+
+#Dev Inner IP
+#spring.datasource.hikari.jdbc-url=jdbc:mariadb://192.168.34.77:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
+#Dev External IP
+spring.datasource.hikari.jdbc-url=jdbc:mariadb://175.196.234.37:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
 spring.datasource.hikari.username=tracom
 spring.datasource.hikari.password=tracom3452
+
 #spring.datasource.hikari.jdbc-url=jdbc:mariadb://127.0.0.1:3306/wrm?characterEncoding=UTF-8&allowMultiQueries=true
 #spring.datasource.hikari.username=APP
 #spring.datasource.hikari.password=APP
@@ -64,4 +69,4 @@ spring.sleuth.sampler.probability=1.0
 spring.zipkin.base-url=http://192.168.34.77:9411/
 spring.zipkin.sender.type=kafka
     
-          
+FILE_ROOT=/
