[백승종] 수정 사항 적용

--- a/SBRT-Web/src/main/resources/application-prog.properties
+++ b/SBRT-Web/src/main/resources/application-prog.properties
@@ -45,11 +45,11 @@ logging.pattern.file=%d %p %c{1.} [%t] %m%n
 
 logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
 
-## if no active profile, default is 'default' ##\uac1c\ubc1c\uc11c\ubc84 \uc801\uc6a9
-#spring.profiles.active=prod
+## if no active profile, default is 'default' ##\uac1c\ubc1c\uc11c\ubc84 \uc801\uc6a9\uc2dc \uc8fc\uc11d \uc81c\uac70
+spring.profiles.active=prod 
 
 # root level
-#logging.level.=INFO
+logging.level.=INFO
 
 
 #Kafka              
@@ -71,4 +71,5 @@ spring.zipkin.sender.type=kafka
     
 FILE_ROOT=/
 
-static.resource.location=file:///C:/sbrt-web/workspace/SBRT-Web/src/main/resources
+#static.resource.location=file:///C:/sbrt-web/workspace/SBRT-Web/src/main/resources
+static.resource.location=file:/was/resources
