--- a/SBRT-Web/src/main/resources/application-prog.properties
+++ b/SBRT-Web/src/main/resources/application-prog.properties
@@ -69,7 +69,7 @@ spring.sleuth.sampler.probability=1.0
 spring.zipkin.base-url=http://192.168.34.77:9411/
 spring.zipkin.sender.type=kafka
     
-FILE_ROOT=/
+FILE_ROOT=/data/fileUpload
 
 #static.resource.location=file:///C:/sbrt-web/workspace/SBRT-Web/src/main/resources
 static.resource.location=file:/was/resources
