[민병희] 승객용안내기 영상편성예약 처리 추가

--- a/SBRT-Web/pom.xml
+++ b/SBRT-Web/pom.xml
@@ -399,6 +399,20 @@
 			<artifactId>unirest-java</artifactId>
 			<version>1.4.9</version>
 		</dependency>
+		
+		<!-- SFTP -->
+		<dependency> 
+		    <groupId>com.jcraft</groupId>
+		    <artifactId>jsch</artifactId>
+		    <version>0.1.55</version>
+		</dependency>		
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
+		<dependency>
+		    <groupId>org.apache.tika</groupId>
+		    <artifactId>tika-core</artifactId>
+		    <version>1.23</version>
+		</dependency>
 	</dependencies>
 
 	<build>
