--- a/SBRT-Web/src/main/resources/application-prog.properties
+++ b/SBRT-Web/src/main/resources/application-prog.properties
@@ -69,7 +69,55 @@ spring.sleuth.sampler.probability=1.0
 spring.zipkin.base-url=http://192.168.34.77:9411/
 spring.zipkin.sender.type=kafka
     
-FILE_ROOT=/data/fileUpload
+FILE_ROOT=/local/sbrt
 
 #static.resource.location=file:///C:/sbrt-web/workspace/SBRT-Web/src/main/resources
 static.resource.location=file:/was/resources
+
+
+################# ftp setting #################
+sftp.host=192.168.34.82
+sftp.port=22
+sftp.user=tracom
+sftp.password=tracom3452
+sftp.remote.directory=/sbrt
+
+# linux
+sftp.linux.local.directory=/local/sbrt
+# windows
+sftp.windows.local.directory=C:/sbrt-web/fileUpload
+
+sftp.audio.directory=/audio
+sftp.route.audio.directory=/common/route_audio
+sftp.video.directory=/video
+
+# routemap
+sftp.routeori.directory=/route
+sftp.route.directory=/route/routemap
+
+# employee
+sftp.employee.directory=/common/employee
+
+# 2021 Selected-Audio
+sftp.common.selectedAudio=/common/selected_audio
+
+# 2021 inner-led
+sftp.common.innerLED=/common/inner_led
+
+# firmware
+sftp.device.directory=/device
+sftp.device.firmware.directory=/firmware
+sftp.device.config.directory=/config
+sftp.device.passenger.directory=/passenger
+sftp.device.elecrouter.directory=/elecrouter
+sftp.device.log.directory=/log
+
+sftp.playlist.directory=/playlist
+
+#destination (led)
+sftp.destination.directory=/destination
+sftp.destination.images=/images
+sftp.destination.list=/list
+
+# vehicle
+sftp.vehicle.directory=/vehicle
