[이재혁] 음성예약 (playlist 생성 테스트 예정)

--- a/SBRT-Web/src/main/resources/application.properties
+++ b/SBRT-Web/src/main/resources/application.properties
@@ -94,6 +94,7 @@ sftp.video.directory=/video
 # routemap
 sftp.routeori.directory=/route
 sftp.route.directory=/route/routemap
+sftp.routemap.directory=/routemap
 
 # employee
 sftp.employee.directory=/common/employee
