[민병희] 세션 타임아웃 변경 (dev:30분, local:24시간)

--- a/SBRT-Web/src/main/resources/application-dev.properties
+++ b/SBRT-Web/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
 server.port=8081
+server.servlet.session.timeout=30m
 spring.application.name=sbrt-web
 spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
 
@@ -57,7 +58,7 @@ spring.kafka.bootstrap-servers=192.168.34.77:9092,192.168.34.82:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=kr.tracom.platform.service.kafka.serialization.TimsMessageSerializer
 spring.kafka.producer.compression-type=gzip
-spring.kafka.consumer.group-id=gid-sbrt-web
+spring.kafka.consumer.group-id=gid-sbrt-web-dev
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=kr.tracom.platform.service.kafka.serialization.TimsMessageDeserializer
