--- a/SBRT-Web/src/main/resources/application.properties
+++ b/SBRT-Web/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+server.servlet.session.timeout=24h
 spring.application.name=sbrt-web
 spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
 
