--- a/SBRT-Web/src/main/resources/application.properties
+++ b/SBRT-Web/src/main/resources/application.properties
@@ -56,7 +56,7 @@ spring.kafka.bootstrap-servers=192.168.34.77:9092,192.168.34.82:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=kr.tracom.platform.service.kafka.serialization.TimsMessageSerializer
 spring.kafka.producer.compression-type=gzip
-spring.kafka.consumer.group-id=gid-sbrt-web
+spring.kafka.consumer.group-id=gid-sbrt-web-test
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=kr.tracom.platform.service.kafka.serialization.TimsMessageDeserializer
