[이재혁] Zipkin에서 WebSocket Broker 추적 안되도록 application-property 수정

--- a/SBRT-Web/src/main/resources/application.properties
+++ b/SBRT-Web/src/main/resources/application.properties
@@ -69,6 +69,7 @@ kafka.topic.member=T-BIS,T-BRT,T-COMMON
 #zipkin
 spring.sleuth.trace-id128=true
 spring.sleuth.sampler.probability=1.0
+spring.sleuth.integration.websockets.enabled=false
 spring.zipkin.base-url=http://192.168.34.77:9411/
 spring.zipkin.sender.type=kafka
     
