[민병희] 영상,이미지 등 파일 업로드 경로 수정(윈도우, 리눅스 구분)

--- a/SBRT-Web/src/main/resources/application.properties
+++ b/SBRT-Web/src/main/resources/application.properties
@@ -75,7 +75,7 @@ spring.zipkin.sender.type=kafka
     
 fileupload.location=/local/sbrt/
 
-windows.fileupload.location=file:///C:/sbrt-web/fileUpload/
+windows.fileupload.location=C:/sbrt-web/fileUpload/
 
 
 #static.resource.location=file:///C:/sbrt-web/workspace/SBRT-Web/src/main/resources
