[민병희] Eureka 에 등록되도록 설정 추가

--- a/SBRT-Web/src/main/resources/application.properties
+++ b/SBRT-Web/src/main/resources/application.properties
@@ -72,6 +72,13 @@ spring.sleuth.sampler.probability=1.0
 spring.sleuth.integration.websockets.enabled=false
 spring.zipkin.base-url=http://192.168.34.77:9411/
 spring.zipkin.sender.type=kafka
+
+#eureka
+eureka.client.service-url.defaultZone=http://192.168.34.77:8101/eureka/
+
+
+
+
     
 fileupload.location=/local/sbrt/
 
