--- a/SBRT-Web/pom.xml
+++ b/SBRT-Web/pom.xml
@@ -375,6 +375,13 @@
 		    <groupId>joda-time</groupId>
 		    <artifactId>joda-time</artifactId>
 		</dependency>
+		
+		<!-- Eureka -->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		    <version>2.2.9.RELEASE</version>
+		</dependency>
 							 			
 		<!-- websocket  -->				
 		<dependency>
