--- a/SBRT-Web/src/main/resources/application-dev.properties
+++ b/SBRT-Web/src/main/resources/application-dev.properties
@@ -69,6 +69,10 @@ spring.sleuth.trace-id128=true
 spring.sleuth.sampler.probability=1.0
 spring.zipkin.base-url=http://192.168.34.77:9411/
 spring.zipkin.sender.type=kafka
+
+#eureka
+eureka.client.service-url.defaultZone=http://192.168.34.77:8101/eureka/    
+    
     
 fileupload.location=/local/sbrt/
 
