[민병희] 실서버 적용용 설정파일, 라이브러리 추가

--- a/SBRT-Web/src/main/resources/application-prod.properties
+++ b/SBRT-Web/src/main/resources/application-prod.properties
@@ -4,11 +4,11 @@ spring.application.name=sbrt-web
 spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
 
 #Dev Inner IP
-spring.datasource.hikari.jdbc-url=jdbc:mariadb://192.168.34.77:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
+#spring.datasource.hikari.jdbc-url=jdbc:mariadb://192.168.34.77:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
 #Dev External IP
 #spring.datasource.hikari.jdbc-url=jdbc:mariadb://175.196.234.37:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
 #Prod Inner IP
-#spring.datasource.hikari.jdbc-url=jdbc:mariadb://192.168.20.101:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
+spring.datasource.hikari.jdbc-url=jdbc:mariadb://192.168.20.101:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
 spring.datasource.hikari.username=tracom
 spring.datasource.hikari.password=tracom3452
 
@@ -55,9 +55,9 @@ logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
 
 #Kafka
 #Prod Inner IP
-#spring.kafka.bootstrap-servers=192.168.20.101:9092,192.168.20.102:9092
+spring.kafka.bootstrap-servers=192.168.20.101:9092,192.168.20.102:9092
 #Dev Inner IP
-spring.kafka.bootstrap-servers=192.168.34.77:9092,192.168.34.82:9092
+#spring.kafka.bootstrap-servers=192.168.34.77:9092,192.168.34.82:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=kr.tracom.platform.service.kafka.serialization.TimsMessageSerializer
 spring.kafka.producer.compression-type=gzip
@@ -76,16 +76,16 @@ spring.sleuth.trace-id128=true
 spring.sleuth.sampler.probability=1.0
 spring.sleuth.integration.websockets.enabled=false
 #Prod Inner IP
-#spring.zipkin.base-url=http://192.168.20.102:9411/
+spring.zipkin.base-url=http://192.168.20.102:9411/
 #Dev Inner IP
-spring.zipkin.base-url=http://192.168.34.77:9411/
+#spring.zipkin.base-url=http://192.168.34.77:9411/
 spring.zipkin.sender.type=kafka
 
 #eureka
 #Prod Inner IP
-#eureka.client.service-url.defaultZone=http://192.168.20.102:8101/eureka/
+eureka.client.service-url.defaultZone=http://192.168.20.102:8101/eureka/
 #Dev Inner IP
-eureka.client.service-url.defaultZone=http://192.168.34.77:8101/eureka/
+#eureka.client.service-url.defaultZone=http://192.168.34.77:8101/eureka/
 
 
 
@@ -103,15 +103,15 @@ windows.static.webapp.location=file:///C:/sbrt-web/workspace/SBRT-Web/src/main/w
 
 ################# ftp setting #################
 #Prod Inner IP
-#sftp.host=192.168.1.100
-#sftp.port=22
-#sftp.user=ftpsbrt
-#sftp.password=!sbrt34%@
-#Dev Inner IP
-sftp.host=192.168.34.82
+sftp.host=192.168.1.100
 sftp.port=22
-sftp.user=tracom
-sftp.password=tracom3452
+sftp.user=ftpsbrt
+sftp.password=!sbrt34%@
+#Dev Inner IP
+#sftp.host=192.168.34.82
+#sftp.port=22
+#sftp.user=tracom
+#sftp.password=tracom3452
 
 sftp.remote.directory=/sbrt
 
