--- a/SBRT-Web/src/main/resources/application-prod.properties
+++ b/SBRT-Web/src/main/resources/application-prod.properties
@@ -47,10 +47,10 @@ logging.pattern.file=%d %p %c{1.} [%t] %m%n
 logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
 
 ## if no active profile, default is 'default' ##\uac1c\ubc1c\uc11c\ubc84 \uc801\uc6a9
-#spring.profiles.active=prod
+spring.profiles.active=prod
 
 # root level
-#logging.level.=INFO
+logging.level.=INFO
 
 
 #Kafka
