--- a/SBRT-Web/src/main/resources/application-dev.properties
+++ b/SBRT-Web/src/main/resources/application-dev.properties
@@ -64,6 +64,10 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=kr.tracom.platform.service.kafka.serialization.TimsMessageDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages='*'
 
+kafka.topic.member=T-BIS,T-BRT,T-COMMON
+#kafka.topic.member=T-COMMON
+
+
 #zipkin
 spring.sleuth.trace-id128=true
 spring.sleuth.sampler.probability=1.0
