[민병희] 좌표로 동네이름 가져오기 API 이동 ( T-APIGateway 를 통해서 가져오도록 함)

--- a/SBRT-Web/src/main/resources/application-dev.properties
+++ b/SBRT-Web/src/main/resources/application-dev.properties
@@ -77,6 +77,10 @@ spring.zipkin.sender.type=kafka
 #eureka
 eureka.client.service-url.defaultZone=http://192.168.34.77:8101/eureka/    
     
+#api gateway url
+#Dev Inner IP
+api.gateway.url=http://192.168.34.77:8100/
+    
     
 fileupload.location=/local/sbrt/
 
