--- a/SBRT-Web/src/main/resources/application-prod.properties
+++ b/SBRT-Web/src/main/resources/application-prod.properties
@@ -87,7 +87,9 @@ eureka.client.service-url.defaultZone=http://192.168.20.102:8101/eureka/
 #Dev Inner IP
 #eureka.client.service-url.defaultZone=http://192.168.34.77:8101/eureka/
 
-
+#api gateway url
+#Prod Inner IP
+api.gateway.url=http://192.168.1.100:8100/
 
     
 fileupload.location=/local/sbrt/
