--- a/SBRT-Web/src/main/resources/application.properties
+++ b/SBRT-Web/src/main/resources/application.properties
@@ -87,7 +87,9 @@ spring.zipkin.sender.type=kafka
 #Dev Inner IP
 eureka.client.service-url.defaultZone=http://192.168.34.77:8101/eureka/
 
-
+#api gateway url
+#Prod Inner IP
+api.gateway.url=http://192.168.34.77:8100/
 
     
 fileupload.location=/local/sbrt/
