--- a/SBRT-Web/src/main/resources/application.properties
+++ b/SBRT-Web/src/main/resources/application.properties
@@ -67,8 +67,8 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=kr.tracom.platform.service.kafka.serialization.TimsMessageDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages='*'
 
-kafka.topic.member=T-BIS,T-BRT,T-COMMON
-#kafka.topic.member=T-COMMON
+#kafka.topic.member=T-BIS,T-BRT,T-COMMON
+kafka.topic.member=T-COMMON
 
 
 #zipkin
@@ -100,8 +100,8 @@ windows.fileupload.location=C:/sbrt-web/fileUpload/
 #static.resource.location=file:///C:/sbrt-web/workspace/SBRT-Web/src/main/resources
 static.resource.location=file:/was/resources
 static.webapp.location=file:/was/webapp
-windows.static.resource.location=file:///C:/sbrt-web/workspace/SBRT-Web/src/main/resources
-windows.static.webapp.location=file:///C:/sbrt-web/workspace/SBRT-Web/src/main/webapp
+windows.static.resource.location=file:///C:/sbrt-web/workspace/SBRT/SBRT-Web/src/main/resources
+windows.static.webapp.location=file:///C:/sbrt-web/workspace/SBRT/SBRT-Web/src/main/webapp
 
 ################# ftp setting #################
 #Prod Inner IP
