[백승종] 수정 사항 적용

--- a/SBRT-Web/src/main/resources/application-prod.properties
+++ b/SBRT-Web/src/main/resources/application-prod.properties
@@ -93,8 +93,10 @@ api.gateway.url=http://192.168.1.100:8100/
 
     
 fileupload.location=/local/sbrt/
+fileupload.location2=file:/local/sbrt/
 
 windows.fileupload.location=C:/sbrt-web/fileUpload/
+windows.fileupload.location2=file:///C:/sbrt-web/fileUpload/
 
 
 #static.resource.location=file:///C:/sbrt-web/workspace/SBRT-Web/src/main/resources
