--- a/SBRT-Web/src/main/resources/application-dev.properties
+++ b/SBRT-Web/src/main/resources/application-dev.properties
@@ -83,8 +83,10 @@ api.gateway.url=http://192.168.34.77:8100/
     
     
 fileupload.location=/local/sbrt/
+fileupload.location2=file:/local/sbrt/
 
 windows.fileupload.location=C:/sbrt-web/fileUpload/
+windows.fileupload.location2=file:///C:/sbrt-web/fileUpload/
 
 
 #static.resource.location=file:///C:/sbrt-web/workspace/SBRT-Web/src/main/resources
