--- a/SBRT-Web/src/main/resources/application.properties
+++ b/SBRT-Web/src/main/resources/application.properties
@@ -61,14 +61,14 @@ spring.kafka.bootstrap-servers=192.168.34.77:9092,192.168.34.82:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=kr.tracom.platform.service.kafka.serialization.TimsMessageSerializer
 spring.kafka.producer.compression-type=gzip
-spring.kafka.consumer.group-id=gid-sbrt-web
+spring.kafka.consumer.group-id=gid-sbrt-web-hw22
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=kr.tracom.platform.service.kafka.serialization.TimsMessageDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages='*'
 
-#kafka.topic.member=T-BIS,T-BRT,T-COMMON
-kafka.topic.member=T-COMMON
+kafka.topic.member=T-BIS,T-BRT,T-COMMON
+#kafka.topic.member=T-COMMON
 
 
 #zipkin
