[백승종] 수정사항 적용

--- a/SBRT-Web/src/main/resources/application-dev.properties
+++ b/SBRT-Web/src/main/resources/application-dev.properties
@@ -1,12 +1,15 @@
 server.port=8082
-server.servlet.session.timeout=30m
+server.servlet.session.timeout=24h
 spring.application.name=sbrt-web
 spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
 
 #Dev Inner IP
-#spring.datasource.hikari.jdbc-url=jdbc:mariadb://192.168.34.77:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
+spring.datasource.hikari.jdbc-url=jdbc:mariadb://192.168.34.77:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
+#spring.datasource.hikari.jdbc-url=jdbc:mariadb://10.10.10.2:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
 #Dev External IP
-spring.datasource.hikari.jdbc-url=jdbc:mariadb://175.196.234.37:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
+#spring.datasource.hikari.jdbc-url=jdbc:mariadb://175.196.234.37:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
+#Prod Inner IP
+#spring.datasource.hikari.jdbc-url=jdbc:mariadb://192.168.20.101:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
 spring.datasource.hikari.username=tracom
 spring.datasource.hikari.password=tracom3452
 
@@ -30,8 +33,6 @@ spring.mvc.view.suffix=.jsp
 server.jsp-servlet.init-parameters.development=true
 spring.devtools.livereload.enabled=true
 
-
-
 # logging level
 logging.level.org.springframework=ERROR
 logging.level.kr.tracom=DEBUG
@@ -46,19 +47,24 @@ logging.pattern.file=%d %p %c{1.} [%t] %m%n
 
 logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
 
-## if no active profile, default is 'default' ##\uac1c\ubc1c\uc11c\ubc84 \uc801\uc6a9\uc2dc \uc8fc\uc11d \uc81c\uac70
-spring.profiles.active=prod 
+## if no active profile, default is 'default' ##\uac1c\ubc1c\uc11c\ubc84 \uc801\uc6a9
+#spring.profiles.active=prod
 
 # root level
 logging.level.=INFO
 
 
-#Kafka              
+#Kafka
+#Prod Inner IP
+#spring.kafka.bootstrap-servers=192.168.20.101:9092,192.168.20.102:9092
+#Dev Inner IP
 spring.kafka.bootstrap-servers=192.168.34.77:9092,192.168.34.82:9092
+#spring.kafka.bootstrap-servers=10.10.10.2:9092,10.10.10.3:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=kr.tracom.platform.service.kafka.serialization.TimsMessageSerializer
 spring.kafka.producer.compression-type=gzip
-spring.kafka.consumer.group-id=gid-sbrt-web-dev
+#spring.kafka.consumer.group-id=gid-sbrt-dev_test
+spring.kafka.consumer.group-id=gid-sbrt-web
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=kr.tracom.platform.service.kafka.serialization.TimsMessageDeserializer
@@ -71,16 +77,27 @@ kafka.topic.member=T-BIS,T-BRT,T-COMMON
 #zipkin
 spring.sleuth.trace-id128=true
 spring.sleuth.sampler.probability=1.0
+spring.sleuth.integration.websockets.enabled=false
+#Prod Inner IP
+#spring.zipkin.base-url=http://192.168.20.102:9411/
+#Dev Inner IP
 spring.zipkin.base-url=http://192.168.34.77:9411/
+#spring.zipkin.base-url=http://10.10.10.2:9411/
 spring.zipkin.sender.type=kafka
 
 #eureka
-eureka.client.service-url.defaultZone=http://192.168.34.77:8101/eureka/    
-    
-#api gateway url
+#Prod Inner IP
+#eureka.client.service-url.defaultZone=http://192.168.20.102:8101/eureka/
 #Dev Inner IP
-api.gateway.url=http://192.168.34.77:8100/
-    
+eureka.client.service-url.defaultZone=http://192.168.34.77:8101/eureka/
+#eureka.client.service-url.defaultZone=http://10.10.10.2:8101/eureka/
+
+#api gateway url
+#Prod Inner IP
+#api.gateway.url=http://192.168.1.100:8100/
+api.gateway.url=http://192.168.34.77:8100
+#api.gateway.url=http://10.10.10.2:8100/
+
     
 fileupload.location=/local/sbrt/
 fileupload.location2=file:/local/sbrt/
@@ -96,10 +113,18 @@ windows.static.resource.location=file:///C:/sbrt-web/workspace/SBRT-Web/src/main
 windows.static.webapp.location=file:///C:/sbrt-web/workspace/SBRT-Web/src/main/webapp
 
 ################# ftp setting #################
-sftp.host=192.168.34.82
+#Prod Inner IP
+sftp.host=192.168.1.100
 sftp.port=22
-sftp.user=tracom
-sftp.password=tracom3452
+sftp.user=ftpsbrt
+sftp.password=!sbrt34%@
+#Dev Inner IP
+#sftp.host=192.168.34.82
+#sftp.host=10.10.10.3
+#sftp.port=22
+#sftp.user=tracom
+#sftp.password=tracom3452
+
 sftp.remote.directory=/sbrt
 
 # linux
@@ -131,6 +156,9 @@ sftp.device.firmware.directory=/firmware
 sftp.device.config.directory=/config
 sftp.device.passenger.directory=/passenger
 sftp.device.elecrouter.directory=/elecrouter
+sftp.device.log.directory=/log
+# transparent display
+sftp.device.transdisplay.directory=/tdmedia
 sftp.device.log.directory=/log
 
 sftp.playlist.directory=/playlist
