--- a/SBRT-Web/src/main/resources/application-prod.properties
+++ b/SBRT-Web/src/main/resources/application-prod.properties
@@ -5,6 +5,7 @@ spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
 
 #Dev Inner IP
 #spring.datasource.hikari.jdbc-url=jdbc:mariadb://192.168.34.77:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
+#spring.datasource.hikari.jdbc-url=jdbc:mariadb://10.10.10.2:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
 #Dev External IP
 #spring.datasource.hikari.jdbc-url=jdbc:mariadb://175.196.234.37:3306/sbrt?characterEncoding=UTF-8&allowMultiQueries=true
 #Prod Inner IP
@@ -47,7 +48,7 @@ logging.pattern.file=%d %p %c{1.} [%t] %m%n
 logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
 
 ## if no active profile, default is 'default' ##\uac1c\ubc1c\uc11c\ubc84 \uc801\uc6a9
-spring.profiles.active=prod
+#spring.profiles.active=prod
 
 # root level
 logging.level.=INFO
@@ -58,9 +59,11 @@ logging.level.=INFO
 spring.kafka.bootstrap-servers=192.168.20.101:9092,192.168.20.102:9092
 #Dev Inner IP
 #spring.kafka.bootstrap-servers=192.168.34.77:9092,192.168.34.82:9092
+#spring.kafka.bootstrap-servers=10.10.10.2:9092,10.10.10.3:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=kr.tracom.platform.service.kafka.serialization.TimsMessageSerializer
 spring.kafka.producer.compression-type=gzip
+#spring.kafka.consumer.group-id=gid-sbrt-dev_test
 spring.kafka.consumer.group-id=gid-sbrt-web
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
@@ -79,6 +82,7 @@ spring.sleuth.integration.websockets.enabled=false
 spring.zipkin.base-url=http://192.168.20.102:9411/
 #Dev Inner IP
 #spring.zipkin.base-url=http://192.168.34.77:9411/
+#spring.zipkin.base-url=http://10.10.10.2:9411/
 spring.zipkin.sender.type=kafka
 
 #eureka
@@ -86,10 +90,13 @@ spring.zipkin.sender.type=kafka
 eureka.client.service-url.defaultZone=http://192.168.20.102:8101/eureka/
 #Dev Inner IP
 #eureka.client.service-url.defaultZone=http://192.168.34.77:8101/eureka/
+#eureka.client.service-url.defaultZone=http://10.10.10.2:8101/eureka/
 
 #api gateway url
 #Prod Inner IP
 api.gateway.url=http://192.168.1.100:8100/
+#api.gateway.url=http://192.168.34.77:8100
+#api.gateway.url=http://10.10.10.2:8100/
 
     
 fileupload.location=/local/sbrt/
@@ -113,6 +120,7 @@ sftp.user=ftpsbrt
 sftp.password=!sbrt34%@
 #Dev Inner IP
 #sftp.host=192.168.34.82
+#sftp.host=10.10.10.3
 #sftp.port=22
 #sftp.user=tracom
 #sftp.password=tracom3452
@@ -149,6 +157,9 @@ sftp.device.config.directory=/config
 sftp.device.passenger.directory=/passenger
 sftp.device.elecrouter.directory=/elecrouter
 sftp.device.log.directory=/log
+# transparent display
+sftp.device.transdisplay.directory=/tdmedia
+sftp.device.log.directory=/log
 
 sftp.playlist.directory=/playlist
 
@@ -160,5 +171,5 @@ sftp.destination.list=/list
 # vehicle
 sftp.vehicle.directory=/vehicle
 
-system.bims.url=http://192.168.20.101:8081/
-system.sbrt.url=http://192.168.20.101:8082/
+system.bims.url=http://localhost:8081/
+system.sbrt.url=http://localhost:8082/
