--- a/SBRT-Web/pom.xml
+++ b/SBRT-Web/pom.xml
@@ -420,6 +420,19 @@
 		    <artifactId>tika-core</artifactId>
 		    <version>1.23</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.9.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.assertj</groupId>
+		    <artifactId>assertj-core</artifactId>
+		    <version>3.22.0</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
