[양현우] 대시보드, 실시간 모니터링, 정류소 모니터링 수정

--- a/SBRT-Web/pom.xml
+++ b/SBRT-Web/pom.xml
@@ -55,6 +55,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
+
+		<dependency>
+		  <groupId>com.fasterxml.jackson.dataformat</groupId>
+		  <artifactId>jackson-dataformat-csv</artifactId>
+		</dependency>
 		
 		<!-- websocket  -->	
 		<dependency>
@@ -437,7 +442,13 @@
 		    <groupId>org.apache.httpcomponents</groupId>
 		    <artifactId>fluent-hc</artifactId>
 		    <version>4.5.13</version>
-		</dependency>		
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.9.0</version>
+		</dependency>				
 		
 	</dependencies>
 
